<resources>
    <string name="app_name">ZenSource</string>

    <string name="hello_blank_fragment">Hello blank Drawer</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="list_icon">List Icon</string>
    <string name="textview_holder">TextView holder</string>
    <string name="quote_image">Quote Image</string>
    <string name="home_card_share">SHARE</string>
    <string name="transition_zoom_card">transition_zoom_card</string>
    <string name="share_button">Share button</string>
    <string name="like_success">Quote marked as liked</string>
    <string name="dislike_success">Quote marked as disliked</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search quotes</string>
    <string name="no_results_found">No results found</string>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_configurations">Configurations</string>
    <string name="menu_liked">Liked Quotes</string>

    <!-- Liked fragment -->
    <string name="liked_number"> quotes liked</string>

    <!-- Configuration Fragment -->
    <string name="config_language">Language</string>
    <string name="str_en">English</string>
    <string name="str_pt">Portuguese</string>
    <string name="config_daily_quote">Daily quote at:</string>
    <string name="edit">Edit</string>
    <string name="set_daily_quote">Daily Quote set to </string>

    <!-- Daily Quote -->
    <string name="daily_quote_title">Daily quote!</string>
    <string name="daily_quote_content">Today\'s quote by</string>
</resources>
