<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/home_card_content"
            android:layout_width="match_parent"
            android:layout_height="96dp">

            <ImageView
                android:id="@+id/home_card_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:adjustViewBounds="true"
                android:alpha="0.5"
                android:contentDescription="@string/quote_image"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                android:transitionName="@string/transition_zoom_card" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/home_card_quote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="This is where the quote comes"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/home_card_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Author"
                    android:textColor="@color/black" />

            </LinearLayout>

        </RelativeLayout>

        <View
            android:id="@+id/home_card_divider_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/home_card_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="0dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/home_card_share_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_below="@+id/home_card_divider_1"
            android:text="@string/home_card_share"
            android:textColor="@color/colorAccent" />


    </RelativeLayout>

</android.support.v7.widget.CardView>